# en2tex

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
resources/: initial_prompt.txt
src/: main.rs
