[package]
name = "en2tex"
license = "MIT"
edition = "2021"
version = "1.0.1"
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/neysofu/en2tex"
repository = "https://github.com/neysofu/en2tex"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>", "Filippo Neysofu Costa <filippo@neysofu.me>"]
description = "Translated English into LaTeX formulas, using OPENAI APIs"

[dependencies]
arboard = "3.2.0"
question = "0.2.2"
spinners = "4.1.0"
serde_json = { version = "1.0.89", default-features = false }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "rustls-tls"] }
bat = { version = "0.22.1", default-features = false, features = ["regex-onig"] }
colored = "2.0.0"
